# yq-atlas

./: .gitignore  CMakeLists.txt  README.md  configure.cmake
api/: CMakeLists.txt
api/atlas/: CMakeLists.txt
api/atlasQt/: atlasQt.cpp
api/atlasVk/: CMakeLists.txt  atlasVk.cpp
api/yq/: CMakeLists.txt
api/yq/atlas/: atlas.cpp
api/yq/atlasQt/: CMakeLists.txt
api/yq/atlasVk/: CMakeLists.txt  GeoBody.cpp  GeoBody.hpp
exe/: CMakeLists.txt
exe/atlas/: CMakeLists.txt  main.cpp
exe/atlasQt/: CMakeLists.txt  main.cpp
